# ai-agenter-2025

./: .env.example  .gitignore  DEVCONTAINER.md  Nice_Activities_Research_Report.md  README.md  all-mcps.json  cc-all-mcps.sh  pyproject.toml  setup-devcontainer.sh
.claude/agents/common/: code-review-specialist.md  documentation-lookup.md  qa-test-engineer.md  research-specialist.md  screenshot-validation-specialist.md  solution-architect.md  ui-ux-designer.md
.claude/commands/: analyze-gap-report.md  context-prime.md  fix-github-issue.md  quick-implement.md  review-imlementation.md  troubleshoot-fix.md  ui-concept-design.md
.claude/commands/fis/: execute-spec.md  generate-spec-no-research.md  generate-spec.md
.claude/commands/process/: 1-idea-refinement.md  2-create-prd.md  3-create-design-system.md  4-create-adrs.md  5-create-implementation-plan.md  6-execute-story.md  brainstorming-toolkit.md
.devcontainer/: devcontainer.json
ai_docs/guidelines/: DEVELOPMENT-ARCHITECTURE-GUIDELINES.md  WEB-DEV-GUIDELINES.md
ai_docs/guides/: playwright-mcp-guide.md  playwright-visial-validation-protocol.md
ai_docs/templates/: CLAUDE_md_temlplate.md
exercises/banana/: prompt.txt
exercises/claudecode/gildedrose-python/: claude_code_gildedrose.md
exercises/claudecode/gildedrose-python/.claude/: settings.local.json
exercises/langgraph/: 1.0-intro.ipynb  1.1-langgraph-first-agent.ipynb  1.2-langgraph-routing.ipynb  1.3-langgraph-tool-calling.ipynb  1.4-langgraph-rag.ipynb  1.5-langgraph-rag-exercise.ipynb  1.6-langgraph-agent-example.ipynb  README.md
exercises/langgraph/extras/: 1.5-langgraph-rag-exercise-completed.ipynb  langgraph-math-agent.ipynb  simple-rag-agent-demo.ipynb
exercises/lekplatsen/app/: lekplatsen.py  models.py
exercises/lekplatsen/app/query/: graph.py
exercises/openai/: 1.0-hello-openai.ipynb  1.1-openai-api-basics.ipynb  1.2-openai-api-advanced.ipynb  1.3-structured-outputs.ipynb  1.4-prompt-engineering.ipynb  1.5-context-management.ipynb  1.6-agentic-applications.ipynb
