[project]
name = "ai-agents-course"
version = "0.1.0"
description = "AI Agents Course - 3-day course on AI agents, LangGraph, and practical implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # AI/LLM frameworks
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "langchain-openai>=0.3.34",
    "langchain-anthropic>=0.3.21",
    "openai>=2.1.0",
    "anthropic>=0.69.0",
    "tavily-python>=0.7.12",
    # Data and validation
    "pydantic>=2.11.10",
    "dataclasses-json>=0.6.7",
    # Vector database
    "chromadb>=1.1.1",
    # Web frameworks
    "fastapi[standard]>=0.118.0",
    # Templates and HTML
    "jinja2>=3.1.6",
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    # Development tools
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agents_course"]

[tool.uv]
dev-dependencies = []
