[project]
name = "ai-agents-course"
version = "0.1.0"
description = "AI Agents Course - 3-day course on AI agents, LangGraph, and practical implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # AI/LLM frameworks
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "langchain-openai>=0.3.34",
    "langchain-anthropic>=0.3.21",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=2.1.0",
    "anthropic>=0.69.0",
    "tavily-python>=0.7.12",
    "pypdf>=6.1.0",
    # HTTP client
    "httpx>=0.28.1",
    # Data and validation
    "pydantic>=2.11.10",
    "dataclasses-json>=0.6.7",
    "docarray>=0.41.0",
    # Vector database
    "chromadb>=1.1.1",
    "lark>=1.3.0",
    # Web frameworks
    "fastapi[standard]>=0.118.0",
    # Templates and HTML
    "jinja2>=3.1.6",
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    # Development tools
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
    # Package manager - needed for %pip install in Jupyter notebooks
    # Note: uv creates venvs without pip by default, so we include it explicitly
    "pip>=25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_agents_course"]

[tool.uv]
dev-dependencies = []
